log
Thu 25 Apr 2024 03:50:31 PM UTC: 
 tests:  0|6
total_score: 0/70
ecf6094
Thu 25 Apr 2024 04:10:36 PM UTC: 
 hashmap.c | 59 +++++++++++++++++++++++------------------------------------
 1 file changed, 23 insertions(+), 36 deletions(-)
In file included from test.c:4:
hashmap.c:57:10: error: redefinition of ‘createMap’
   57 | HashMap *createMap(long capacity) { return NULL; }
      |          ^~~~~~~~~
hashmap.c:24:10: note: previous definition of ‘createMap’ with type ‘HashMap *(long int)’ {aka ‘struct HashMap *(long int)’}
   24 | HashMap *createMap(long capacity) {
      |          ^~~~~~~~~
Compilation failed
75f877d
Thu 25 Apr 2024 04:11:06 PM UTC: 
 hashmap.c | 23 +++++++++++------------
 1 file changed, 11 insertions(+), 12 deletions(-)
 tests:  1|5
total_score: 10/70
80a7d0f
Thu 25 Apr 2024 06:33:44 PM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
70ed785
Thu 25 Apr 2024 06:39:39 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
9781034
Thu 25 Apr 2024 11:53:35 PM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
9c41bc8
Thu 25 Apr 2024 11:56:16 PM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
e027a6f
Thu 25 Apr 2024 11:57:36 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
c4b1d27
Thu 25 Apr 2024 11:59:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2bc27f8
